2003-11-26  Pavel Roskin  <proski@gnu.org>

	* gc.c (vfs_ncs_getid): Merge with vfs_getid().

	* gc.c: Eliminate all code for timestamping parent filesystems.
	It's broken and undocumented.  Adjust all dependencies.

2003-11-24  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* direntry.c (vfs_s_resolve_symlink): Eliminate
	g_strdup_printf().
	(vfs_s_fullpath): Likewise.

2003-11-21  Pavel Roskin  <proski@gnu.org>

	* ftpfs.c (ftpfs_login_server): Explicit password should have
	priority over the netrc password and the anonymous password.
	Reported by Jindrich Makovicka <makovick@kmlinux.fjfi.cvut.cz>

2003-11-14  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* undelfs.c (undelfs_loaddel): Use g_try_malloc()/g_try_relloc()
	since we want to recover and not abort the program if we don't
	have enough memory.
	(com_err): Fix implementation.

2003-11-14  Pavel Roskin  <proski@gnu.org>

	* vfs.c (vfs_split): Deconstify.
	* direntry.c (vfs_s_get_path_mangle): Likewise.  "mangle" is in
	the name for a reason.  Use vfs_s_get_path() instead where the
	path should be preserved.
	* extfs.c (extfs_get_path_mangle): Likewise.
	* sfs.c (sfs_vfmake): Protect against changes in vfs_split().

2003-11-13  Pavel Roskin  <proski@gnu.org>

	* vfs.h: Constify chdir() and opendir() methods.  Adjust all
	dependencies.
	* vfs.c (mc_chdir): Constify, eliminate protection against
	broken implementations of chdir() method.
	(mc_opendir): Constify.

	* direntry.c (vfs_s_stamp_me): Generalize and move ...
	* gc.c (vfs_stamp_create): ... here.  Use whenever possible.

2003-11-12  Pavel Roskin  <proski@gnu.org>

	* gc.c: Use NULL instead of -1 for empty vfsid.  Adjust all
	dependencies.
	* undelfs.c (undelfs_get_path): Don't shadow static ext2_fname.
	(undelfs_getid): Likewise.  Use fs for non-empty vfsid.

2003-11-12  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* cpio.c (cpio_create_entry): Fix possible buffer underflow
	and memory leak.

2003-11-08  Pavel Roskin  <proski@gnu.org>
