@@ -38,9 +38,15 @@
 
 #include <stdio.h>
 #include <stdlib.h>
-/* asm/types.h defines its own umode_t :-( */
+
+#ifdef HAVE_EXT2FS_EXT2_FS_H
+#include <ext2fs/ext2_fs.h>
+#else
+/* asm/types.h defines its own umode_t */
 #undef umode_t
 #include <linux/ext2_fs.h>
+#endif
+
 #include <ext2fs/ext2fs.h>
 #include <ctype.h>
 
