@@ -1,3 +1,8 @@
+2003-11-28  Pavel Roskin  <proski@gnu.org>
+
+	* undelfs.c: Use ext2fs/ext2_fs.h instead of linux/ext2_fs.h
+	when possible.
+
 2003-11-26  Pavel Roskin  <proski@gnu.org>
 
 	* gc.c (vfs_ncs_getid): Merge with vfs_getid().
